--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -6,6 +6,11 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "@googlemaps/js-api-loader": "^1.12.7",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
