--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.21.3",
     "cookie-parser": "^1.4.5",
     "http-proxy-middleware": "^2.0.1",
+    "jwt-decode": "^3.1.2",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
