--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -28,6 +28,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flash-message": "^1.0.8",
     "react-image-picker": "^1.1.1",
     "react-material-ui-carousel": "^3.1.0",
     "react-redux": "^7.2.5",
